paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/bool_char_int_c3/sample_001/target.compile.log
error[E0599]: no function or associated item named `of_val` found for struct `TypeId` in the current scope
   --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/bool_char_int_c3/sample_001/target.rs:4:43
    |
  4 |         if TypeId::of::<i32>() == TypeId::of_val(&$x) {
    |                                           ^^^^^^ function or associated item not found in `TypeId`
...
 23 |     if type_id!(pc + 0) != 1 {
    |        ---------------- in this macro invocation
    |
note: if you're trying to build a new `TypeId`, consider using `TypeId::of` which returns `TypeId`
   --> /Users/arielkellison/.rustup/toolchains/nightly-2025-09-10-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/any.rs:777:5
    |
777 |     pub const fn of<T: ?Sized + 'static>() -> TypeId {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the macro `type_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `of_val` found for struct `TypeId` in the current scope
   --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/bool_char_int_c3/sample_001/target.rs:6:50
    |
  6 |         } else if TypeId::of::<u32>() == TypeId::of_val(&$x) {
    |                                                  ^^^^^^ function or associated item not found in `TypeId`
...
 23 |     if type_id!(pc + 0) != 1 {
    |        ---------------- in this macro invocation
    |
note: if you're trying to build a new `TypeId`, consider using `TypeId::of` which returns `TypeId`
   --> /Users/arielkellison/.rustup/toolchains/nightly-2025-09-10-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/any.rs:777:5
    |
777 |     pub const fn of<T: ?Sized + 'static>() -> TypeId {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the macro `type_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `of_val` found for struct `TypeId` in the current scope
   --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/bool_char_int_c3/sample_001/target.rs:4:43
    |
  4 |         if TypeId::of::<i32>() == TypeId::of_val(&$x) {
    |                                           ^^^^^^ function or associated item not found in `TypeId`
...
 26 |     if type_id!(sc + 0) != 1 {
    |        ---------------- in this macro invocation
    |
note: if you're trying to build a new `TypeId`, consider using `TypeId::of` which returns `TypeId`
   --> /Users/arielkellison/.rustup/toolchains/nightly-2025-09-10-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/any.rs:777:5
    |
777 |     pub const fn of<T: ?Sized + 'static>() -> TypeId {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the macro `type_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `of_val` found for struct `TypeId` in the current scope
   --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/bool_char_int_c3/sample_001/target.rs:6:50
    |
  6 |         } else if TypeId::of::<u32>() == TypeId::of_val(&$x) {
    |                                                  ^^^^^^ function or associated item not found in `TypeId`
...
 26 |     if type_id!(sc + 0) != 1 {
    |        ---------------- in this macro invocation
    |
note: if you're trying to build a new `TypeId`, consider using `TypeId::of` which returns `TypeId`
   --> /Users/arielkellison/.rustup/toolchains/nightly-2025-09-10-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/any.rs:777:5
    |
777 |     pub const fn of<T: ?Sized + 'static>() -> TypeId {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the macro `type_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `of_val` found for struct `TypeId` in the current scope
   --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/bool_char_int_c3/sample_001/target.rs:4:43
    |
  4 |         if TypeId::of::<i32>() == TypeId::of_val(&$x) {
    |                                           ^^^^^^ function or associated item not found in `TypeId`
...
 29 |     if type_id!(uc + 0) != 1 {
    |        ---------------- in this macro invocation
    |
note: if you're trying to build a new `TypeId`, consider using `TypeId::of` which returns `TypeId`
   --> /Users/arielkellison/.rustup/toolchains/nightly-2025-09-10-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/any.rs:777:5
    |
777 |     pub const fn of<T: ?Sized + 'static>() -> TypeId {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the macro `type_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `of_val` found for struct `TypeId` in the current scope
   --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/bool_char_int_c3/sample_001/target.rs:6:50
    |
  6 |         } else if TypeId::of::<u32>() == TypeId::of_val(&$x) {
    |                                                  ^^^^^^ function or associated item not found in `TypeId`
...
 29 |     if type_id!(uc + 0) != 1 {
    |        ---------------- in this macro invocation
    |
note: if you're trying to build a new `TypeId`, consider using `TypeId::of` which returns `TypeId`
   --> /Users/arielkellison/.rustup/toolchains/nightly-2025-09-10-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/any.rs:777:5
    |
777 |     pub const fn of<T: ?Sized + 'static>() -> TypeId {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the macro `type_id` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0599`.